--- a/DogGo - Backup.csproj
+++ b/DogGo - Backup.csproj
@@ -1,16 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Compile Remove="Models\NewFolder1\**" />
-    <Content Remove="Models\NewFolder1\**" />
-    <EmbeddedResource Remove="Models\NewFolder1\**" />
-    <None Remove="Models\NewFolder1\**" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.14" />
